# rsbids

./: .gitignore  Cargo.toml  LICENSE.md  README.md  pyproject.toml
rsbids/: __init__.py  __init__.pyi  _lib.pyi  bidspath.py  entry.py  exceptions.py  helpers.py  rsbids.pyi  userpath.py
rsbids/pybids/: __init__.py
rsbids/pybids/layout/: __init__.py  index.py  layout.py  models.py  writing.py
rsbids/tests/: conftest.py  helpers.py  strategies.py  test_benchmarks.py  test_parse.py
src/: bidspath.rs  dataset.rs  dataset_description.rs  errors.rs  fs.rs  layout.rs  lib.rs  main.rs  primitives.rs  py.rs  pybidspath.rs  serialize.rs  standards.rs  utils.rs
src/dataset/: builder.rs  entity_table.rs  iterator.rs
src/filetree_experiment/: filetree.rs  segment_generator.rs  segments.rs
src/layout/: bidspath.rs  builders.rs  cache.rs  entity_table.rs  iterator.rs  roots.rs  utfpath.rs
src/layout/builders/: bidspath_builder.rs  layout_builder.rs  metadata_builder.rs  parsers.rs  primitives.rs
src/layout/builders/parsers/: generic.rs  spec.rs
src/py/: pybidspath.rs  pydescription.rs  pyexceptions.rs  pylayout.rs  pylayout_iterator.rs  pyparams.rs
src/py/pyparams/: derivatives.rs  entity_query.rs  iterable.rs  pathlist.rs  pyiterable.rs  scope.rs
