[package]
name = "rsbids"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsbids"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = "0.19.0"
async-walkdir = "0.2.0"
futures-lite = "2.0.0"
itertools = "0.11.0"
once_cell = "1.18.0"
rand = "0.8.5"
walkdir = "2.4.0"
