[package]
name = "rsbids"
version = "0.0.1-a3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsbids"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
async-walkdir = "0.2.0"
futures-lite = "2.0.0"
itertools = "0.11.0"
once_cell = "1.18.0"
rand = "0.8.5"
walkdir = "2.4.0"
bimap = "0.6.3"
glob = "0.3.1"
globset = "0.4.13"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.108"
self_cell = "1.0.2"
thiserror = "1.0.50"
serde_with = { version = "3.4.0", features = ["macros"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[features]
extension-module = ["pyo3/extension-module"]
