[project]
name = "rsbids"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "typing-extensions>=4.6.0",
]


[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rsbids._lib"
strip = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest-benchmark>=4.0.0",
    "pytest>=7.4.3",
    "pyright>=1.1.337",
]
